# eventPlanner

backend/: .gitignore  docker-compose.yml
backend/docs/: openapi.yaml
backend/server/: Dockerfile  pyproject.toml
backend/server/apps/events/: routers.py  tasks.py
backend/server/apps/events/admin/: __init__.py  event.py  location.py  schedule.py
backend/server/apps/events/constants/: __init__.py  errors.py
backend/server/apps/events/filtersets/: __init__.py  event.py
backend/server/apps/events/models/: __init__.py  event.py  location.py  schedule.py
backend/server/apps/events/serializers/: __init__.py  event.py  location.py  schedule.py
backend/server/apps/events/utils/: __init__.py  celery_task_func.py  create_event_with_schedule.py
backend/server/apps/events/viewsets/: __init__.py  event.py  location.py
backend/server/apps/users/: routers.py
backend/server/apps/users/admin/: __init__.py  child.py  user.py
backend/server/apps/users/models/: __init__.py  child.py  user.py
backend/server/apps/users/serializers/: __init__.py  child.py  user.py
backend/server/apps/users/urls/: auth.py  user_urls.py
backend/server/apps/users/views/: __init__.py  child.py  user_summary.py
backend/server/config/: api_urls.py  celery.py  urls.py
backend/server/config/migrations/users/: 0001_initial.py
backend/server/config/settings/: installed_apps.py  settings.py
