[tool.poetry]
name = "findplace"
version = "0.1.0"
description = ""
authors = ["YaroslavIonin <ioninyaroslav22@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.7"
djangorestframework = "^3.14.0"
dj-database-url = "^2.1.0"
psycopg = "^3.1.13"
djangorestframework-simplejwt = "^5.3.0"
django-cors-headers = "^4.3.1"
django-admin-geomap = "^1.6"
django-filter = "^23.5"
gunicorn = "^21.2.0"
pip = "^23.3.2"
install = "^1.3.5"
django-push-notifications = "^3.0.2"
python-dotenv = "^1.0.0"
celery = "^5.3.6"
redis = "^5.0.1"
django-celery-results = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
